Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.7 ----------

[w2l] Polyglossia bugfix: Now sets the default language correctly

[w2l] Babel bugfix: No language is now ignored rather than exported as English 

[w2x] Bugfix: No language is now exported as zxx rather than zxx-none

[w2l] Added support for unnumbered headings

[w2x] Bugfix: Unnumbered headings are now exported correctly

[w2x] Bugfix: Do not add space to empty labels (e.g. heading numbering)

[w2x] Export line breaks as spaces in annotations and EPUB table of content

[w2x] Bugfix: Do not export cell widths for tables with relative width

[w2x] Export suffix and prefix on footnotes and endnotes

[w2x] Export footnotes as endnotes (if text:footnotes-position="document"). A new option footnotes_heading is added:
  The value of this (if non-empty) is used as heading for the footnotes in this case

[w2x] EPUB: Set body margin to zero

[w2x] Export footnote rule (using first master page)

[w2x] Export page background color (using first master page)

[w2x] The option use_dublin_core no longer has effect on EPUB export (instead identifier, author, date and title are always
  exported, and other properties are exported if they exist and are non-empty)

[w2x] Added opf:file-as attribute to EPUB metadata (creators and contributors)

[w2x] EPUB meta data can now be edited directly from the export dialog

[w2x] Revised the internal structure of EPUB files: Text files are named chapter<n>.xhtml, images are placed in the
  subdirectory images and name image<n>, styles are placed in the subdirectory styles and names styles.css (custom
  style sheet) and styles1.css (generated style sheet)

[w2x] Use relative font size is now selected per default in EPUB export dialog

[w2x] Default value of the option formulas changed to image+starmath

[w2x] Default value of the option use_default_font changed to false (was true by mistake)

---------- version 1.1.6 ----------
