@@ -2,6 +2,12 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.7 ----------
 
+[w4l] Check that the document is saved locally (file) and (on Windows) with a drive letter - otherwise LaTeX cannot run
+
+[w4l] Delete .aux file before TeXifying (this avoids errors in some cases)
+
+[w2x] Changed Dublin Core profile name to match current specification
+
 [w2l] Polyglossia bugfix: Now sets the default language correctly
 
 [w2l] Babel bugfix: No language is now ignored rather than exported as English 
